[tool.poetry]
name = "tron"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
alembic = "^1.15.1"
sqlalchemy = "^2.0.39"
tronpy = "^0.5.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pydantic = "^2.10.6"
pytest-anyio = "^0.0.0"
anyio = "^4.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"